# local-rag-chat

./: .editorconfig  .gitignore  README.md  compose.yaml  pyproject.toml
.github/: copilot-instructions.md
docs/: Requirements.md
prompts/: system_prompt.md
sql/: init.sql
src/local_rag_chat/: __init__.py  chat_client.py  cli.py  database.py  document_processor.py
