[project]
name = "local-rag-chat"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Jarrett Meyer", email = "jarrettmeyer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.6",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
]

[project.scripts]
local-rag-chat = "local_rag_chat:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
